--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Freddie Mercury Tribute</title>
         <meta charest="UTF-8">
-        <link rel="stylesheet" href="C:\Users\naaaa\Desktop\weeeeb\1\style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <main id="main">
